now links open in another tab

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
         <div class="item" id="formacao">
             <img src="img/formacao.png">
-            <p><a href="https://cert.efset.org/92MEjX">Inglês fluente</a></p>
+            <p><a href="https://cert.efset.org/92MEjX" target="_blank" rel="noopener noreferrer">Inglês fluente</a></p>
             <p>Espanhol intermediário</p>
             <p>Atualmente estudando Análise e Desenvolvimento de Sistemas na UNINTER</p>
         </div>
 
         <div class="item" id="portifolio">
             <img src="img/portifolio.png">
-            <p><a href="https://github.com/IzanagLP">GitHub</a></p>
+            <p><a href="https://github.com/IzanagLP" target="_blank" rel="noopener noreferrer">GitHub</a></p>
         </div>
 
         <div class="item" id="contato">
             <img src="img/contact.png">
-            <p><a href="https://www.instagram.com/izanaglp/">Instagram</a></p>
+            <p><a href="https://www.instagram.com/izanaglp/" target="_blank" rel="noopener noreferrer">Instagram</a></p>
         </div>
     </div>
 
